kubernetes/dc-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-db
  labels:
    app: dc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-db
  template:
    metadata:
      labels:
        app: dc-db
    spec:
      containers:
        - name: dc-db
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: dc-db
              subPath: db
      volumes:
      - name: dc-db
        persistentVolumeClaim:
          claimName: dc-pvc
