kubernetes/dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc
  labels:
    app: dc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc
  template:
    metadata:
      labels:
        app: dc
    spec:
      containers:
        - name: dc
          image: edincubator/data-catalogue
          volumeMounts:
            - name: ckan-config
              mountPath: /etc/ckan/default/production.ini
              subPath: production.ini
            - name: ckan-data
              mountPath: /var/lib/ckan
              subPath: ckan-data
      volumes:
        - name: ckan-config
          secret:
            secretName: dc-secret
            items:
            - key: CKAN_CONFIG
              path: production.ini
        - name: ckan-data
          persistentVolumeClaim:
            claimName: dc-pvc
