kubernetes/dc-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-db
spec:
  selector:
    app: dc-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
