kubernetes/dc-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-redis
spec:
  selector:
    app: dc-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
