kubernetes/dc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc
spec:
  selector:
    app: dc
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
