kubernetes/dc-solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-solr
spec:
  selector:
    app: dc-solr
  ports:
    - protocol: TCP
      port: 8983
      targetPort: 8983
